add change_title api
