# backend/api/doc/api_doc.go
@@ -308,6 +308,73 @@ var DocChangeAuthor ginbuilder.HandleFunc = ginbuilder.HandleFunc{
 	},
 }
 
+/*
+更改标题名称
+@api_doc_tags: 文档
+只改标题名称
+*/
+var DocChangeTitle ginbuilder.HandleFunc = ginbuilder.HandleFunc{
+	HttpMethod: "POST",
+	RelativePaths: []string{
+		"/api/api_hub/v1/doc/doc/change_title/:doc_id",
+	},
+	Handle: func(ctx *ginbuilder.Context) (err error) {
+		// request uri data
+		type UriData struct {
+			DocId uint32 `json:"doc_id" uri:"doc_id" binding:"required"`
+		}
+		uriData := UriData{}
+		retCode, err := ctx.BindUriData(&uriData)
+		if err != nil {
+			ctx.Errorf(retCode, "verify change title uri data failed. %s.", err)
+			return
+		}
+
+		// request post data
+		type PostData struct {
+			Title string `json:"title" form:"title" binding:"required"`
+		}
+		postData := PostData{}
+		retCode, err = ctx.BindPostData(&postData)
+		if err != nil {
+			ctx.Errorf(retCode, "verify change title post data failed. %s.", err)
+			return
+		}
+
+		reqCtx := ctx.RequestCtx
+		dbClient := table.NewHubDB(reqCtx)
+
+		doc, err := dbClient.AhDocGet(uriData.DocId)
+		if nil != err {
+			ctx.Errorf(code.CodeErrorDBQueryFailed.Clone(), "get doc failed. %s", err)
+			return
+		}
+
+		if doc.Title == postData.Title {
+			ctx.Success()
+			return
+		}
+
+		bsDoc := business.NewBsDoc(reqCtx)
+		err = bsDoc.DocUpdate(
+			doc.DocId,
+			postData.Title,
+			doc.CategoryId,
+			doc.AuthorId,
+			doc.SpecUrl,
+			doc.SpecContent,
+			time.Now().Unix(),
+		)
+		if nil != err {
+			ctx.Errorf(code.CodeErrorDBUpdateFailed.Clone(), "update doc title failed. %s", err)
+			return
+		}
+
+		ctx.Success()
+		return
+	},
+}
+
 // 删除文档
 // @api_doc_tags: 文档
 var DocDelele ginbuilder.HandleFunc = ginbuilder.HandleFunc{
