# backend/swagger.json
@@ -641,7 +641,6 @@
 				"parameters": [
 					{
 						"type": "integer",
-						"description": "文档ID",
 						"name": "doc_id",
 						"in": "path",
 						"required": true
@@ -761,6 +760,75 @@
 				}
 			}
 		},
+		"/api/api_hub/v1/doc/doc/change_title/{doc_id}": {
+			"post": {
+				"description": "只改标题名称",
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/json"
+				],
+				"tags": [
+					"文档"
+				],
+				"summary": "更改标题名称",
+				"operationId": "POST-/api/api_hub/v1/doc/doc/change_title/{doc_id}",
+				"parameters": [
+					{
+						"type": "integer",
+						"description": "文档ID",
+						"name": "doc_id",
+						"in": "path",
+						"required": true
+					},
+					{
+						"type": "integer",
+						"description": "（公参）账户ID，不填默认为1",
+						"name": "X-Ah-Account-Id",
+						"in": "header"
+					},
+					{
+						"name": "PostData",
+						"in": "body",
+						"required": true,
+						"schema": {
+							"type": "object",
+							"properties": {
+								"title": {
+									"type": "string",
+									"required": [
+										"title"
+									]
+								}
+							}
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "success",
+						"schema": {
+							"type": "object",
+							"properties": {
+								"data": {
+									"description": "result data",
+									"type": "object"
+								},
+								"msg": {
+									"description": "result message",
+									"type": "string"
+								},
+								"ret": {
+									"description": "result code",
+									"type": "integer"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
 		"/api/api_hub/v1/doc/doc/check_post": {
 			"post": {
 				"description": "用在swagger.sh上",
@@ -797,6 +865,7 @@
 									]
 								},
 								"spec_content": {
+									"description": "swagger content",
 									"type": "string"
 								},
 								"spec_url": {
@@ -804,7 +873,7 @@
 									"type": "string"
 								},
 								"title": {
-									"description": "标题",
+									"description": "文档标题",
 									"type": "string",
 									"required": [
 										"title"
@@ -1020,7 +1089,6 @@
 				"parameters": [
 					{
 						"type": "integer",
-						"description": "文档ID",
 						"name": "doc_id",
 						"in": "path",
 						"required": true
@@ -1046,6 +1114,7 @@
 									]
 								},
 								"spec_content": {
+									"description": "swagger content",
 									"type": "string"
 								},
 								"spec_url": {
@@ -1053,7 +1122,7 @@
 									"type": "string"
 								},
 								"title": {
-									"description": "标题",
+									"description": "文档标题",
 									"type": "string",
 									"required": [
 										"title"
